--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "grunt": "^0.4.5",
     "grunt-concurrent": "^1.0.0",
     "grunt-dotnet-assembly-info": "^1.0.18",
-    "grunt-msbuild": "^0.3.4",
+    "grunt-msbuild": "^0.3.7",
     "grunt-mstest": "^0.1.5",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^1.0.0",
-    "grunt-nuget": "~0.1.4"
+    "grunt-nuget": "0.1.5"
   },
   "engines": {
     "node": ">=0.8.0"
